# sm64js-mmo-server

./: .env.template  .gitignore  .gitmodules  .markdownlint.json  Cargo.toml  Dockerfile  DockerfileBuild  README.md  createGameForm.html  docker-compose.yml  levelData.js  package.json  publish-server.sh  publish.sh  server.js
.github/workflows/: audit.yml  publish.yml  test-and-publish.yml  test.yml
crates/: Dockerfile
crates/sm64js/: Cargo.toml
crates/sm64js-api/: Cargo.toml
crates/sm64js-api/src/: account.rs  ban.rs  chat.rs  ip_ban.rs  lib.rs  login.rs  logout.rs  mute.rs  players.rs
crates/sm64js-auth/: Cargo.toml
crates/sm64js-auth/src/: auth.rs  identity.rs  lib.rs
crates/sm64js-common/: Cargo.toml
crates/sm64js-common/src/: chat.rs  lib.rs
crates/sm64js-db/: Cargo.toml
crates/sm64js-db/migrations/2021-02-17-070448_create_accounts/: up.sql
crates/sm64js-db/migrations/2021-02-18-070400_create_accounts/: down.sql  up.sql
crates/sm64js-db/migrations/2021-02-18-070400_create_discord_sessions/: up.sql
crates/sm64js-db/migrations/2021-02-18-070410_create_google_sessions/: down.sql  up.sql
crates/sm64js-db/migrations/2021-02-18-070420_create_discord_accounts/: down.sql  up.sql
crates/sm64js-db/migrations/2021-02-18-070430_create_google_accounts/: down.sql  up.sql
crates/sm64js-db/migrations/2021-02-18-070500_create_accounts/: up.sql
crates/sm64js-db/migrations/2021-02-18-070500_create_discord_sessions/: down.sql  up.sql
crates/sm64js-db/migrations/2021-02-18-070510_create_google_sessions/: up.sql
crates/sm64js-db/migrations/2021-02-18-071521_create_discord_accounts/: up.sql
crates/sm64js-db/migrations/2021-02-18-071525_create_google_accounts/: up.sql
crates/sm64js-db/migrations/2021-02-18-071538_create_google_sessions/: up.sql
crates/sm64js-db/migrations/2021-03-15-154950_create_bans/: down.sql  up.sql
crates/sm64js-db/migrations/2021-03-16-074049_create_geolocations/: down.sql  up.sql
crates/sm64js-db/migrations/2021-03-18-070438_add_column_last_ip_to_account/: down.sql  up.sql
crates/sm64js-db/migrations/2021-03-18-070941_update_set_last_ip_not_null/: down.sql  up.sql
crates/sm64js-db/migrations/2021-03-18-071007_alter_last_ip_not_null/: down.sql  up.sql
crates/sm64js-db/migrations/2021-03-29-142737_create_mutes/: down.sql  up.sql
crates/sm64js-db/migrations/2021-04-16-061142_ip_bans/: down.sql  up.sql
crates/sm64js-db/src/: lib.rs  models.rs  schema.rs
crates/sm64js-env/: Cargo.toml
crates/sm64js-env/src/: lib.rs
crates/sm64js-proto/: Cargo.toml  build.rs
crates/sm64js-proto/src/: lib.rs
crates/sm64js-ws/: Cargo.toml  build.rs
crates/sm64js-ws/src/: client.rs  game.rs  lib.rs  room.rs  server.rs  session.rs
crates/sm64js/benches/: game.rs
crates/sm64js/src/: auth.rs  lib.rs  login.rs  main.rs  server.rs  websocket.rs
crates/sm64js/src/openapi/: index.html
openapi/: index.html  rapidoc-min.js
proto/: mario.proto  mario_pb.js
rust-server/: Cargo.toml  DockerfileBuild  build.rs
rust-server/proto/: mario.proto
rust-server/src/: auth.rs  chat.rs  client.rs  game.rs  identity.rs  main.rs  permission.rs  room.rs  server.rs  session.rs
sm64js/: Cargo.toml  DockerfileBuild
sm64js/proto/: mario.proto
sm64js/src/: chat.rs  client.rs  date_format.rs  game.rs  login.rs  main.rs  server.rs  session.rs
