[package]
name = "sm64js"
version = "0.1.0"
authors = ["Mario Reder <mreder1289@gmail.com>"]
edition = "2018"

[build-dependencies]
prost-build = "0.6"

[dependencies]
anyhow = "1"
actix = "0.10"
actix-codec = "0.3"
actix_derive = "0.5"
actix-files = "0.5"
actix-http = { version = "2", features = [ "rustls" ] }
actix-service = "1"
actix-session = "0.4"
actix-web = "3"
actix-web-actors = "3"
awc = "2"
censor = "0.2"
chrono = "0.4"
dashmap = { version = "4", features = ["rayon"] }
dotenv = "0.15"
env_logger = "0.8"
flate2 = "1"
futures = "0.3"
indexmap = "1"
lazy_static = "1"
maplit = "1"
paperclip = { git = "https://github.com/Tarnadas/paperclip.git", commit = "57173df635435946eb0265f2706b34ab5492d0b7", features = ["actix-nightly", "actix-files", "actix-session", "chrono"] }
parking_lot = "0.11"
prost = "0.6"
rand = "0.8"
rayon = "1"
ron = "0.6"
serde = "1"
serde_json = "1"
strum = { version = "0.20", features = ["derive"] }
thiserror = "1"
v_htmlescape = "0.12"
