[package]
name = "sm64js-api"
version = "0.1.0"
authors = ["Mario Reder <mreder1289@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
actix = "0.10"
actix-http = { version = "2", features = [ "rustls" ] }
actix-service = "1"
actix-session = "0.4"
actix-web = "3"
awc = "2"
chrono = "0.4"
diesel = { version = "1", features = ["chrono", "postgres", "r2d2"] }
futures = "0.3"
humantime-serde = "1"
paperclip = { git = "https://github.com/wafflespeanut/paperclip.git", rev = "a64cabbb13ad9d51a67c12d3dbf9c986a1ff6585", features = ["actix-nightly", "actix-session", "chrono"] }
parking_lot = "0.11"
r2d2 = "0.8"
serde = "1"
serde_json = "1"
serde_with = "1"
sm64js-auth = { path = "../sm64js-auth" }
sm64js-common = { path = "../sm64js-common" }
sm64js-db = { path = "../sm64js-db" }
sm64js-env = { path = "../sm64js-env" }
sm64js-ws = { path = "../sm64js-ws" }
thiserror = "1"

[features]
docker = []
