[package]
name = "sm64js-auth"
version = "0.1.0"
authors = ["Mario Reder <mreder1289@gmail.com>"]
edition = "2018"

[dependencies]
actix-codec = "0.3"
actix-http = { version = "2", features = [ "rustls" ] }
actix-service = "1"
actix-session = "0.4"
actix-web = "3"
awc = "2"
chrono = "0.4"
diesel = { version = "1", features = ["chrono", "postgres", "r2d2"] }
flate2 = "1"
futures = "0.3"
indexmap = "1"
lazy_static = "1"
paperclip = { git = "https://github.com/wafflespeanut/paperclip.git", rev = "a64cabbb13ad9d51a67c12d3dbf9c986a1ff6585", features = ["actix-nightly", "actix-session", "chrono"] }
parking_lot = "0.11"
r2d2 = "0.8"
rand = "0.8"
serde = "1"
serde_json = "1"
sm64js-db = { path = "../sm64js-db" }
thiserror = "1"

[features]
docker = []
