[package]
name = "sm64js-db"
version = "0.1.0"
authors = ["Mario Reder <mreder1289@gmail.com>"]
edition = "2018"

[dependencies]
actix-session = "0.4"
actix-web = "3"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1", features = ["chrono", "postgres", "r2d2"] }
paperclip = { git = "https://github.com/wafflespeanut/paperclip.git", rev = "a64cabbb13ad9d51a67c12d3dbf9c986a1ff6585", features = ["actix-nightly", "actix-session", "chrono"] }
r2d2 = "0.8"
serde = "1"
sm64js-common = { path = "../sm64js-common" }
sm64js-env = { path = "../sm64js-env" }
thiserror = "1"
