[package]
name = "sm64js-ws"
version = "0.1.0"
authors = ["Mario Reder <mreder1289@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
rustrict = "0.3"
chrono = "0.4"
dashmap = { version = "5", features = ["rayon"] }
flate2 = "1"
humantime = "2"
once_cell = "1"
parking_lot = "0.11"
prost = "0.6"
rand = "0.8"
rayon = "1"
serde = "1"
sm64js-auth = { path = "../sm64js-auth" }
sm64js-common = { path = "../sm64js-common" }
sm64js-db = { path = "../sm64js-db" }
sm64js-env = { path = "../sm64js-env" }
sm64js-proto = { path = "../sm64js-proto" }
thiserror = "1"

[features]
docker = []
