[package]
name = "sm64js"
version = "0.1.0"
authors = ["Mario Reder <mreder1289@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
actix = "0.10"
actix-cors = "0.5"
actix-files = "0.5"
actix-http = { version = "2", features = [ "rustls" ] }
actix-service = "1"
actix-session = "0.4"
actix-web = "3"
actix-web-actors = "3"
diesel = { version = "1", features = ["chrono", "postgres", "r2d2"] }
diesel_migrations = "1"
env_logger = "0.9"
indexmap = "1"
paperclip = { git = "https://github.com/wafflespeanut/paperclip.git", rev = "a64cabbb13ad9d51a67c12d3dbf9c986a1ff6585", features = ["actix-nightly", "actix-session", "chrono"] }
parking_lot = "0.11"
r2d2 = "0.8"
rand = "0.8"
rustrict = { version = "0.3", features = ["customize"], default-features = false }
serde = "1"
sm64js-api = { path = "../sm64js-api" }
sm64js-auth = { path = "../sm64js-auth" }
sm64js-common = { path = "../sm64js-common" }
sm64js-db = { path = "../sm64js-db" }
sm64js-env = { path = "../sm64js-env" }
sm64js-proto = { path = "../sm64js-proto" }
sm64js-ws = { path = "../sm64js-ws" }
thiserror = "1"

[features]
docker = ["sm64js-proto/docker"]

[dev-dependencies]
actix-rt = "*"
criterion = { version = "0.3", features =[ "html_reports" ] }
dashmap = "5"
gnuplot = "0.0"

[[bench]]
name = "game"
harness = false
